Add Kubernetes endpoints and logging functionality (#17)
* Initial plan

* Implement Kubernetes endpoints and logging functionality


* Update OpenAPI spec with liveness endpoint documentation


---------
